--- a/styles.scss
+++ b/styles.scss
@@ -2,18 +2,18 @@
 
 
 // Colors
-$light-blue: #3AA4F3;
+$light-blue: #3493da;
 $light-grey: #b1d0d6;
 $cream: #FDFBF7;
 $gray: #64605f;
 $purple: #9158A2;
-$pink: #f5ded2;
+$blue: #174161;
 
 // Base document colors
 $navbar-bg: $light-blue; // navbar
 $navbar-fg: $cream; // navbar foreground elements
-$navbar-hl: $pink; // highlight color when hovering over navbar links
+$navbar-hl: $blue; // highlight color when hovering over navbar links
 $body-bg: $cream; // page background 
 $body-color: $gray; // page text 
 $footer-bg: $cream; // footer 
-$link-color: $pink; // hyperlinks
+$link-color: $blue; // hyperlinks
