--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,7 @@
 /*-- scss:defaults --*/
 
+// Import fonts
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 // Colors
 $light-blue: #3493da;
